--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,12 @@ dependencies {
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     //sql
     runtimeOnly 'mysql:mysql-connector-java:8.0.25'
+
+    //mongoDB
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+
     //security && JWT
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
