--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     //mongoDB
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+    implementation 'org.springframework.data:spring-data-mongodb:3.4.14'
     testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 
     //security && JWT
