--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
+    //AOP
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+
 }
 //querydsl 추가 시작
 def querydslDir = "$buildDir/generated/querydsl"
